# bandfit

./: .gitignore  README.md  flake.nix  pyproject.toml
bandfit/: bandfit.py
data/: Code.txt  t_t_0.5_c_2.0_d_0.0_pc_1.0_pd_1.0.txt  t_t_1.0_c_0.75_d_0.0_pc_1.0_pd_1.0.txt  t_t_1.0_c_0.75_d_0.2_pc_1.0_pd_1.0.txt  t_t_1.0_c_0.75_d_0.4_pc_1.0_pd_1.0.txt  t_t_1.0_c_0.75_d_0.8_pc_1.0_pd_1.0.txt  t_t_1.3_c_0.4_d_0.2_pc_0.0_pd_1.0.txt
example/: example.ipynb
