[tool.poetry]
name = "bandfit"
version = "0.1.0"
description = ""
authors = ["Valentin Boettcher <hiro@protagon.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
lmfit = "^1.1.0"
ipython = "^8.11.0"
jupyter-core = "^5.3.0"
scikit-image = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
